# ACGProject2025

./: .gitignore  CMakeLists.txt  README.md  arch.txt  pack_code.py  self_pack.py
assets/envir/: NightSkyHDRI008_1K_HDR.hdr
assets/model/apples/: apples.mtl
assets/model/bible/: bible.mtl
assets/model/coinstack/: coinstack.mtl
assets/model/compass/: compass.mtl
assets/model/inkwell/: inkwell.mtl
assets/model/newton/: newton.mtl
assets/model/scroll/: scroll.mtl
assets/model/telescope/: telescope.mtl
assets/model/tree/: tree.mtl
src/: main.cpp  scene_list.cpp
src/accel/: AABB.hpp  BVH.hpp  kdtree.hpp
src/core/: distribution.hpp  loader_impl.cpp  onb.hpp  photon.hpp  ray.hpp  record.hpp  utils.hpp
src/light/: arealight.hpp  envirlight.hpp  light_agg.hpp  light_utils.hpp  pointlight.hpp
src/material/: bsdf.hpp  diffuse.hpp  dispersive.hpp  emitter.hpp  glass.hpp  isotropic_phase.hpp  material.hpp  material_agg.hpp  material_utils.hpp  metal.hpp  phase_function.hpp
src/object/: cone.hpp  disk.hpp  mesh.hpp  moving_mesh.hpp  moving_sphere.hpp  object_agg.hpp  object_utils.hpp  sphere.hpp  triangle.hpp  volume.hpp
src/renderer/: integrator.hpp  integrator_utils.hpp  path_integrator.hpp  photon_integrator.hpp
src/scene/: camera.hpp  light.hpp  mesh.hpp  moving_sphere.hpp  object.hpp  scene.hpp  sphere.hpp  triangle.hpp  volume.hpp
src/texture/: checker.hpp  image_texture.hpp  perlin.hpp  solid_color.hpp  texture_agg.hpp  texture_utils.hpp
